refactor: DTO 생성자에서 null 대신 빈 컬렉션 반환
- 여러 DTO의 생성자에서 null인 컬렉션 필드를 빈 컬렉션으로 초기화하도록 변경했습니다.
- 이는 NullPointerException을 방지하고 코드의 안정성을 높이기 위함입니다.
- `Collections.emptyList()` 및 `Collections.emptyMap()`을 사용하여 불변의 빈 컬렉션을 반환하도록 하여 메모리 효율성을 높였습니다.
- `GlobalMapperConfig`에 `nullValueMapMappingStrategy`를 추가하여 Map 타입의 필드 매핑 시 null 값을 기본값으로 반환하도록 설정했습니다.
- `UserApiMapper`에서 `roles` 필드에 대한 `defaultExpression` 매핑을 제거했습니다. 이는 `UserDto` 생성자에서 이미 null 처리를 하기 때문입니다.